fix inconsistent spacing in css, remove console logs

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,7 +24,6 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-
  nav {
   font-family: 'Bungee', cursive, sans-serif;
  }
@@ -32,10 +31,5 @@ body {
  main {
    width: 90%;
    margin: 0 auto;
-   /* display: flex;
-   flex-direction: column;
-   align-items: center; */
    background-color: #f4f1ec;
-   
-
  }
